[UPD]#62797	Initiator/Regarding category, new requirements. Minor fixes.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/Search.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/Search.cshtml
@@ -59,7 +59,7 @@
             @if (Model.ComputerUserCategories.Show)
             {
                 <tr>
-                    <td>Category <!--TODO translate--></td>
+                    <td>@Translation.GetCoreTextTranslation("Kategori")</td>
                     <td>@Html.DropDown("ComputerUserCategoryDropDown", "ComputerUserCategoryID", true, Model.ComputerUserCategories.Content)</td>
                 </tr>
             }
