[UPD]#62797	Initiator/Regarding category, new requirements. Dev testing fixes and improvements.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_CategoryInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_CategoryInput.cshtml
@@ -38,11 +38,11 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>@Translation.GetCoreTextTranslation("Standard") @Translation.GetCoreTextTranslation(CaseSections.InitiatorHeader)</td>
+                        <td>@Translation.GetCoreTextTranslation("Standard") @ViewBag.InitiatorSectionHeader</td>
                         <td>@Html.CheckBoxFor(m => m.DefaultInitiatorCategory, new { @class = "switchcheckbox" })</td>        
                     </tr>
                     <tr>
-                        <td>@Translation.GetCoreTextTranslation("Standard") @Translation.GetCoreTextTranslation(CaseSections.RegardingHeader)</td>
+                        <td>@Translation.GetCoreTextTranslation("Standard") @ViewBag.RegardingSectionHeader</td>
                         <td>@Html.CheckBoxFor(m => m.DefaultRegardingCategory, new { @class = "switchcheckbox" })</td>
                     </tr>
                     </tbody>
