--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/UserCategories.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/UserCategories.cshtml
@@ -1,9 +1,9 @@
-﻿@using DH.Helpdesk.BusinessData.Models
-@model IList<ComputerUserCategoryOverview>
+﻿@using DH.Helpdesk.Web.Models.Notifiers
+@model IList<ComputerUserCategoryListItem>
 
 @functions {
 
-    string BuildEditUrl(ComputerUserCategoryOverview item)
+    string BuildEditUrl(ComputerUserCategoryListItem item)
     {
         if (item.IsEmpty && item.Id == 0)
         {
@@ -13,22 +13,25 @@
     }
 }
 
-<div class="row">
-<div class="span6">
-    <table class="table table-striped table-bordered table-hover" style="display:inline-table">
+
+
+    <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
             <th>@Translation.GetCoreTextTranslation("Kategorier")</th>
+            <th class="span4">@Translation.GetCoreTextTranslation("Standard") @ViewBag.InitiatorSectionHeader</th>
+            <th class="span4">@Translation.GetCoreTextTranslation("Standard") @ViewBag.RegardingSectionHeader</th>
         </tr>
         </thead>
         <tbody>
         @foreach (var item in Model)
         {
             <tr style="cursor: pointer" onclick="window.location.href = '@BuildEditUrl(item)'">
-                <td>@Html.DisplayFor(x => item.Name)</td>
+                <td>@item.Name @(item.IsEmpty ? string.Format("{0} ({1})", item.Name, Translation.GetCoreTextTranslation("Standard")) : "")</td>
+                <td>@Html.CheckBoxFor(m => item.IsDefaultInitiator, new { @class = "switchcheckbox", @readonly = "readonly" }) </td>
+                <td>@Html.CheckBoxFor(m => item.IsDefaultRegarding, new { @class = "switchcheckbox", @readonly = "readonly" }) </td>
             </tr>
         }
         </tbody>
     </table>
-</div>
-</div>
+
