--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -268,14 +268,12 @@
                                             @if (@Model.ComputerUserCategories.Any())
                                             {
                                                 <tr class="displaytr" style="@(Model.InitiatorUserCategoryVisible ? "" : "display:none")">
-                                                    <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id, "Sök kategori")</td>
+                                                    <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id, "Anmälarkategori")</td>
                                                     <td>@Html.DropDownList("InitiatorCategory", Model.BuildComputerCategoriesSelectList(Model.InitiatorComputerUserCategory != null ? (int?)Model.InitiatorComputerUserCategory.ID : null), "")</td>
                                                 </tr>
                                             }
                                             <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.ReportedBy, CaseSolutionFields.UserNumber)">
-                                                <td>
-                                                    @CaseFieldCaption(GlobalEnums.TranslationCaseFields.ReportedBy, "Användar ID")
-                                                </td>
+                                                <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.ReportedBy, "Användar ID")</td>
                                                 <td>
                                                     @Html.Hidden("ShowReportedBy", Model.caseFieldSettings.getCaseSettingsValue(GlobalEnums.TranslationCaseFields.ReportedBy.ToString()).ShowOnStartPage)
                                                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.ReportedBy, CaseSolutionFields.UserNumber))
@@ -603,16 +601,12 @@
                                         @if (Model.ComputerUserCategories.Any())
                                         {
                                             <tr class="displaytr" style="@(Model.RegardingUserCategoryVisible ? "" : "display:none")">
-                                                <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id, "Sök kategori")</td>
-                                                <td>
-                                                    @Html.DropDownList("IsAboutCategory", Model.BuildComputerCategoriesSelectList(Model.RegardingComputerUserCategory != null ? (int?)Model.RegardingComputerUserCategory.ID : null), "")
-                                                </td>
+                                                <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id, "Anmälarkategori")</td>
+                                                <td>@Html.DropDownList("IsAboutCategory", Model.BuildComputerCategoriesSelectList(Model.RegardingComputerUserCategory != null ? (int?)Model.RegardingComputerUserCategory.ID : null), "")</td>
                                             </tr>
                                         }
                                         <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy, CaseSolutionFields.IsAbout_ReportedBy)">
-                                            <td>
-                                                @CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy, "Användar ID")
-                                            </td>
+                                            <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy, "Användar ID")</td>
                                             <td>
                                                 @*This line can be only used for Initiator-ReportedBy*@
                                                 @*@Html.Hidden("ShowReportedBy", Model.caseFieldSettings.getCaseSettingsValue(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy.ToString()).ShowOnStartPage)*@
