[FIX]#62797	Initiator/Regarding category, new requirements. Fixed default category reset.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -126,6 +126,7 @@
                         <input type="hidden" name="CaseFieldSettings[73].Id" value="@Model.CaseFieldSettings.getCaseFieldSettingId(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
                         <input type="hidden" name="CaseFieldSettings[73].EMailIdentifier" value="@Model.CaseFieldSettings.getEMailIdentifier(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
                         <input type="hidden" name="CaseFieldSettings[73].CaseFieldSettingsGUID" value="@Model.CaseFieldSettings.getCaseFieldSettingsGUID(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
+                        <input type="hidden" name="CaseFieldSettings[73].DefaultValue" value="@Model.CaseFieldSettings.getDefaultValue(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
                     </td>
                     <td class="tableth5x">
                         <input type="checkbox" name="CaseFieldSettings[73].Hide" @(Model.CaseFieldSettings.getHide(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()) ? "checked=checked" : "") value="true" />
@@ -720,6 +721,7 @@
                     <input type="hidden" name="CaseFieldSettings[74].Id" value="@Model.CaseFieldSettings.getCaseFieldSettingId(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
                     <input type="hidden" name="CaseFieldSettings[74].EMailIdentifier" value="@Model.CaseFieldSettings.getEMailIdentifier(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
                     <input type="hidden" name="CaseFieldSettings[74].CaseFieldSettingsGUID" value="@Model.CaseFieldSettings.getCaseFieldSettingsGUID(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettings[74].DefaultValue" value="@Model.CaseFieldSettings.getDefaultValue(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
                 </td>
                 <td class="tableth5x">
                     <input type="checkbox" name="CaseFieldSettings[74].Hide" @(Model.CaseFieldSettings.getHide(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString()) ? "checked=checked" : "") value="true" />
